k8s/teachers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachers-deployment
spec:
  replicas: 1                         # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: teachers                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: teachers               # мітка Pod по якому вона буде зв'язана з Deployment та Service


    spec:
      containers:
        - image: teachers:0.1      # образ Docker
          imagePullPolicy: Never      # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: teachers           # ім'я контейнеру
          ports:
            - containerPort: 8080     # порт по якому можна звертатись до поди
