k8s/teachers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teachers-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/teachers
            pathType: "Prefix"
            backend:
              service:
                name: teachers-service
                port:
                  number: 80
